# supported-languages

./: .flake8  README.md  index.js  package-lock.json  package.json  pyproject.toml  setup.py
countries/: countries.py
languages/: languages.py
src/: constants.py  countries.py  languages.py
supported_languages/: constants.js  constants.py  countries.js  countries.json  countries.py  languages.js  languages.py  supported_languages.json
