[tool.poetry]
name = "supported-languages"
version = "0.1.0"
description = ""
authors = ["Óscar Delgado <odelgado@citibeats.com>"]
readme = "README.md"
packages = [{include = "supported_languages"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
